12621
This is basically another re-incarnation / a duplicate of scala/bug#9111.

Changing the example a little:

A.java
```scala
public class A {
  public static class AInner {
    public static interface InnerInterface { }
  }
}
```
B.java
```scala
public class B {
  public static class BInner extends A.AInner  {
    public class ProblemClass implements InnerInterface { }
  }
}
```
Test.scala
```scala
object Main {
  def main(args: Array[String]): Unit = {
    // new B() // this still causes the crash reported in this ticket
    val bi = new B.BInner
    new bi.ProblemClass()
  }
}
```

The above doesn't compile (in mixed compilation), neither on 2.11, nor on 2.12:
```
$ scalac11 A.java B.java Test.scala
B.java:3: error: not found: type InnerInterface
    public class ProblemClass implements InnerInterface { }
                                         ^
one error found
```

This is due to the way the Scala compiler interprets Java static member classes, see scala/bug#9111.

When the Scala code does `new B()` instead, it crashes in the backend. The reason is that the new backend causes some more types to be completed eagerly, something that has lead to other issues already and we should work on. But we have a workaround for scala/bug#9111 in the backend, and I hope it can be extended to this bug. Will check tomorrow.
